# test-tecnico-ai-engineer

./: .gitignore  README.md  README_NEW.md  pyproject.toml  requirements.txt
Dataset/: domande.csv
Dataset/ground_truth/: dish_mapping.json
src/: utils.py
src/ai/: clients.py
src/ai/agents/: __init__.py  engine.py  engine_easy.py  engine_hard.py  engine_medium.py  extractor.py
src/ai/models/: codice_extractor.py  extractor.py  manuale_extractor.py  menu_classifier.py  menu_extractor.py
src/ai/prompts/: advanced_extractor.py  codice_extractor.py  easy_medium_engine.py  engine.py  hard_engine.py  manuale_extractor.py  menu_advanced_extractor.py  menu_classifier.py  menu_simple_extractor.py  simple_extractor.py
src/data_pizza_test/: document_ingestion.py  openai_agent.py  test_agent.py
src/evaluation/: __init__.py  easy_questions_evaluation.py  questions_evaluation.py
src/experiments/: advanced_rag.ipynb  easy_rag_advanced.ipynb  easy_rag_simple.ipynb  hard_rag.ipynb  medium_rag.ipynb  simple_rag.ipynb
src/preprocessing/: codice_mapping.py  manuale_mapping.py  menu_classification.py  menu_extraction.py  menu_ingestion.py  menu_mapping.py
