[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test-tecnico-ai-engineer"
version = "0.1.0"
description = "Dataset, evaluation scripts and metrics (Jaccard similarity) for the AI engineer technical test."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
  { name = "Sisco" },
]
dependencies = [
  "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

